fix alignment

--- a/themes/graphcool/source/style/content.styl
+++ b/themes/graphcool/source/style/content.styl
@@ -5,9 +5,8 @@ code-font()
 
 #content
   max-width 760px
-  margin-top: 80px
-  margin-left: 30px
-  -webkit-text-size-adjust: 100%;
+  margin 80px auto 0
+  text-size-adjust 100%
 
   em
     font-style italic
